# fitsrs

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benches/: decompress.rs  iterate_over_headers.rs
crates/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: lib.rs  main.rs  struct.rs
fitswasm/: Cargo.toml  README.md
fitswasm/src/: lib.rs
misc/: Npix134.fits  Npix208.fits  Npix8.fits
samples/fits.gsfc.nasa.gov/: Astro_UIT.fits  EUVE.fits  HST_FGS.fits  HST_FOC.fits  HST_FOS.fits  HST_HRS.fits  HST_NICMOS.fits  HST_WFPC_II.fits  HST_WFPC_II_bis.fits  IUE_LWP.fits  Random_Groups.fits
samples/hips2fits/: allsky_panstarrs.fits  cutout-CDS_P_HST_PHAT_F475W.fits
samples/hipsgen/: Npix132.fits  Npix133.fits  Npix134.fits  Npix140.fits  Npix208.fits  Npix282.fits  Npix4906.fits  Npix691539.fits  Npix8.fits  Npix9.fits
samples/misc/: AKAI013000932.fits  P122_49.fits  bonn.fits  drao.fits  ji0590044.fits  skv1678175163788.fits
src/: async_fits.rs  card.rs  card_value.rs  error.rs  file.rs  fits.rs  gz.rs  image_integration.rs  lib.rs  primary_header.rs  wcs.rs
src/hdu/: data.rs  data_async.rs  extension.rs  header.rs  mod.rs  primary.rs
src/hdu/data/: asciitable.rs  bintable.rs  image.rs  iter.rs  layout.rs  mod.rs  stream.rs
src/hdu/data/bintable/: buf.rs  cursor.rs  data.rs  dithering.rs  mod.rs  rice.rs  row.rs  tile_compressed.rs
src/hdu/data/bintable/tile_compressed/: mod.rs  pixels.rs  rice.rs
src/hdu/data/image/: buf.rs  cursor.rs  mod.rs
src/hdu/header/: mod.rs
src/hdu/header/extension/: asciitable.rs  bintable.rs  image.rs  mod.rs
