[package]
name = "fitsrs"
version = "0.1.1"
authors = ["Matthieu Baumann <matthieu.baumann@astro.unistra.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
byteorder = "1.4.2"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.24"

[profile.release]
lto = true
