[package]
name = "fitsrs"
version = "0.1.1"
authors = ["Matthieu Baumann <matthieu.baumann@astro.unistra.fr>"]
edition = "2018"
description = "Implementation of the FITS image parser"
license = "Apache-2.0 OR MIT"
readme = "readme.md"
categories = ["science", "algorithms", "astronomy"]
keywords = ["fits"]
documentation = "https://docs.rs/fitsrs"
homepage = "https://github.com/cds-astro/fitsrs/"
repository = "https://github.com/cds-astro/fitsrs/"
exclude = [
    "samples/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
byteorder = "1.4.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.24"
async-trait = "0.1.66"

[dev-dependencies]
test-case = "3.0.0"
tokio = { version = "1.26.0", features = ["rt", "macros"]}

[profile.release]
lto = true
