[package]
name = "fitswasm"
version = "0.1.5"
authors = ["Matthieu Baumann <matthieu.baumann@astro.unistra.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]}
js-sys = "0.3.46"
fitsrs = { path = './..' }

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
